# cpp-bazel-docker

./: BUILD.bazel  README.md  WORKSPACE  cloudbuild.yaml  main.cc
