
load("@io_bazel_rules_docker//cc:image.bzl", "cc_image")

load("@io_bazel_rules_docker//container:container.bzl", "container_image")

container_image(
    name = "cc_image",
    base = "@distroless_base//image",
    entrypoint = ["/main"],
    cmd = [], 
    files = [
        ":main",
    ],
    repository = "us-central1-docker.pkg.dev/builder-project/r1/ccimage",
)

cc_binary(
    name = "main",
    srcs = [
        "main.cc",
    ],
    linkopts=['-static'],
    deps = [
        "@google_cloud_cpp//:kms",       
    ],
)
